Fix line wrapping, increase num of courses/quizzes, ui bugs

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ body {
   border-color: transparent;
   color: #fff;
 }
+
+.card.student-response * {
+  white-space: normal;
+}
